--- a/app/Src/EditCampaignScreen.fx.yaml
+++ b/app/Src/EditCampaignScreen.fx.yaml
@@ -424,7 +424,7 @@ EditCampaignScreen As screen:
 
     Button1_1 As button:
         Height: =55
-        OnSelect: =SendTemplateFlow.Run(ExistingCampaignGallery.Selected.Subject, ExistingCampaignGallery.Selected.Template.Id);
+        OnSelect: =SendTemplateFlow.Run(ExistingCampaignGallery.Selected.Subject, "", ExistingCampaignGallery.Selected.Template.Id);
         Text: ="Send to Simple list"
         Width: =223
         X: =1116
