--- a/app/CanvasManifest.json
+++ b/app/CanvasManifest.json
@@ -114,7 +114,7 @@
     "TemplatesScreen",
     "EditCampaignScreen",
     "EditTemplateScreen",
-    "CreateNewScreen",
+    "CreateNew",
     "PreviewCampaignScreen",
     "PreviewTemplateScreen",
     "SendOutScreen",
