--- a/app/Src/EditCampaignScreen.fx.yaml
+++ b/app/Src/EditCampaignScreen.fx.yaml
@@ -1,6 +1,6 @@
 EditCampaignScreen As screen:
     OnVisible: |-
-        =UpdateContext({varShowPopup :false});
+        =UpdateContext({isDeleteVisible :false, isSendVisible: false});
         Set(varBase64Only, Blank());
 
     EditCampaignForm As form:
@@ -346,7 +346,7 @@ EditCampaignScreen As screen:
 
     Button11 As button:
         OnSelect: |-
-            =UpdateContext({varShowPopup:true})
+            =UpdateContext({isDeleteVisible:true})
         RadiusBottomLeft: =0
         RadiusBottomRight: =0
         RadiusTopLeft: =0
@@ -391,7 +391,7 @@ EditCampaignScreen As screen:
     Button1 As button:
         Height: =55
         OnSelect: =SendEmailFlow.Run(ExistingCampaignGallery.Selected.ID, varCurrentUser.Email);
-        Text: ="Send to Role"
+        Text: ="Send Campaign"
         Width: =223
         X: =1116
         Y: =572
@@ -407,7 +407,7 @@ EditCampaignScreen As screen:
         Rectangle1_3 As rectangle:
             Fill: =RGBA(56, 96, 178, 0.7)
             Height: =338
-            Visible: =varShowPopup
+            Visible: =isDeleteVisible
             Width: =897
             X: =240
             Y: =90
@@ -423,7 +423,7 @@ EditCampaignScreen As screen:
             RadiusTopLeft: =0
             RadiusTopRight: =0
             Text: ="Cancel"
-            Visible: =varShowPopup
+            Visible: =isDeleteVisible
             Width: =198
             X: =704
             Y: =338
@@ -439,7 +439,7 @@ EditCampaignScreen As screen:
             RadiusTopLeft: =0
             RadiusTopRight: =0
             Text: ="Delete"
-            Visible: =varShowPopup
+            Visible: =isDeleteVisible
             Width: =198
             X: =456
             Y: =338
@@ -451,7 +451,7 @@ EditCampaignScreen As screen:
             Height: =108
             Size: =15
             Text: ="Are you sure you want to delete the campaign?"
-            Visible: =varShowPopup
+            Visible: =isDeleteVisible
             Width: =385
             X: =490
             Y: =173
@@ -523,4 +523,65 @@ EditCampaignScreen As screen:
         X: =1116
         Y: =34
         ZIndex: =18
+
+    SendPopup_1 As group:
+        Height: =5
+        Width: =5
+        X: =40
+        Y: =40
+        ZIndex: =23
+
+        Rectangle1_5 As rectangle:
+            Fill: =RGBA(255, 255, 255, 0.95)
+            Height: =Parent.Height - 80
+            Visible: =isSendVisible
+            Width: =Parent.Width - 80
+            X: =40
+            Y: =40
+            ZIndex: =19
+
+        Button8_5 As button:
+            Fill: =RGBA(255, 0, 0, 1)
+            Height: =44
+            HoverFill: =ColorFade(Self.Fill, -20%)
+            OnSelect: |-
+                =UpdateContext({varShowPopup:false});
+            RadiusBottomLeft: =0
+            RadiusBottomRight: =0
+            RadiusTopLeft: =0
+            RadiusTopRight: =0
+            Text: ="Cancel"
+            Visible: =isSendVisible
+            Width: =190
+            X: =685
+            Y: =338
+            ZIndex: =20
+
+        Button7_5 As button:
+            Fill: =RGBA(0, 134, 208, 1)
+            Height: =44
+            OnSelect: |-
+                =SendEmailFlow.Run(ExistingCampaignGallery.Selected.ID, varCurrentUser.Email);
+                UpdateContext({varShowPopup:false}); 
+            RadiusBottomLeft: =0
+            RadiusBottomRight: =0
+            RadiusTopLeft: =0
+            RadiusTopRight: =0
+            Text: ="Send"
+            Visible: =isSendVisible
+            Width: =190
+            X: =447
+            Y: =338
+            ZIndex: =21
+
+        Label8_4 As label:
+            Align: =Align.Center
+            Height: =108
+            Size: =15
+            Text: ="Are you sure you want to send email to all recipients?"
+            Visible: =isSendVisible
+            Width: =369
+            X: =480
+            Y: =173
+            ZIndex: =22
 
