--- a/app/Src/PreviewCampaignScreen.fx.yaml
+++ b/app/Src/PreviewCampaignScreen.fx.yaml
@@ -1,6 +1,6 @@
 PreviewCampaignScreen As screen:
     OnVisible: |-
-        =UpdateContext({varShowPopup: false})
+        =UpdateContext({isSendVisible: false})
 
     CampaignPreviewForm As form:
         DataSource: =NewCampaign
@@ -12,7 +12,7 @@ PreviewCampaignScreen As screen:
         Width: =1194
         X: =52
         Y: =79
-        ZIndex: =3
+        ZIndex: =1
 
         Subject_DataCard3 As typedDataCard.textualEditCard:
             BorderStyle: =BorderStyle.Solid
@@ -215,18 +215,18 @@ PreviewCampaignScreen As screen:
         Width: =351
         X: =554
         Y: =29
-        ZIndex: =6
+        ZIndex: =2
 
     Icon4_1 As icon.Send:
         Color: =RGBA(56, 96, 178, 1)
         Height: =50
         Icon: =Icon.Send
         OnSelect: |-
-            =UpdateContext({varShowPopup: true})
+            =UpdateContext({isSendVisible: true})
         Width: =46
         X: =1033
         Y: =29
-        ZIndex: =7
+        ZIndex: =3
 
     Icon5_1 As icon.BackArrow:
         Height: =48
@@ -234,67 +234,7 @@ PreviewCampaignScreen As screen:
         OnSelect: =ResetForm(CampaignPreviewForm);Back()
         X: =286
         Y: =23
-        ZIndex: =12
-
-    DeletePopup_1 As group:
-        Height: =5
-        Width: =5
-        X: =40
-        Y: =40
-        ZIndex: =12
-
-        Rectangle1_2 As rectangle:
-            Fill: =RGBA(56, 96, 178, 0.7)
-            Height: =338
-            Visible: =varShowPopup = true
-            Width: =860
-            X: =240
-            Y: =90
-            ZIndex: =8
-
-        Button8_2 As button:
-            Fill: =RGBA(0, 134, 208, 1)
-            Height: =44
-            OnSelect: |-
-                =UpdateContext({varShowPopup:false}); Navigate(PreviewCampaignScreen);
-            RadiusBottomLeft: =0
-            RadiusBottomRight: =0
-            RadiusTopLeft: =0
-            RadiusTopRight: =0
-            Text: ="Cancel"
-            Visible: =varShowPopup = true
-            Width: =190
-            X: =685
-            Y: =338
-            ZIndex: =9
-
-        Button7_2 As button:
-            Fill: =RGBA(0, 134, 208, 1)
-            Height: =44
-            OnSelect: |-
-                =UpdateContext({varShowPopup:false}); Remove([@TemplateList], BrowseGallery1.Selected); If (IsEmpty(Errors([@TemplateList], BrowseGallery1.Selected)), Back())
-            RadiusBottomLeft: =0
-            RadiusBottomRight: =0
-            RadiusTopLeft: =0
-            RadiusTopRight: =0
-            Text: ="Send"
-            Visible: =varShowPopup = true
-            Width: =190
-            X: =447
-            Y: =338
-            ZIndex: =10
-
-        Label8_1 As label:
-            Align: =Align.Center
-            Color: =RGBA(255, 255, 255, 1)
-            Height: =108
-            Size: =15
-            Text: ="Are you sure you want to send email to all recipients?"
-            Visible: =varShowPopup = true
-            Width: =369
-            X: =480
-            Y: =173
-            ZIndex: =11
+        ZIndex: =4
 
     HtmlText1_2 As htmlViewer:
         Height: =294
@@ -302,5 +242,66 @@ PreviewCampaignScreen As screen:
         Width: =1274
         X: =52
         Y: =450
-        ZIndex: =13
+        ZIndex: =5
+
+    SendPopup As group:
+        Height: =5
+        Width: =5
+        X: =40
+        Y: =40
+        ZIndex: =12
+
+        Rectangle1_2 As rectangle:
+            Fill: =RGBA(255, 255, 255, 0.95)
+            Height: =Parent.Height - 80
+            Visible: =isSendVisible
+            Width: =Parent.Width - 80
+            X: =40
+            Y: =40
+            ZIndex: =6
+
+        Button8_2 As button:
+            Fill: =RGBA(255, 0, 0, 1)
+            Height: =44
+            HoverFill: =ColorFade(Self.Fill, -20%)
+            OnSelect: |-
+                =UpdateContext({varShowPopup:false});
+            RadiusBottomLeft: =0
+            RadiusBottomRight: =0
+            RadiusTopLeft: =0
+            RadiusTopRight: =0
+            Text: ="Cancel"
+            Visible: =isSendVisible
+            Width: =190
+            X: =685
+            Y: =338
+            ZIndex: =7
+
+        Button7_2 As button:
+            Fill: =RGBA(0, 134, 208, 1)
+            Height: =44
+            OnSelect: |-
+                =SendEmailFlow.Run(ExistingCampaignGallery.Selected.ID, varCurrentUser.Email);
+                UpdateContext({varShowPopup:false}); 
+            RadiusBottomLeft: =0
+            RadiusBottomRight: =0
+            RadiusTopLeft: =0
+            RadiusTopRight: =0
+            Text: ="Send"
+            Visible: =isSendVisible
+            Width: =190
+            X: =447
+            Y: =338
+            ZIndex: =8
+
+        Label8_1 As label:
+            Align: =Align.Center
+            Height: =108
+            Size: =15
+            Text: ="Are you sure you want to send email to all recipients?"
+            Visible: =isSendVisible
+            Width: =369
+            X: =480
+            Y: =173
+            ZIndex: =9
 
