--- a/app/Src/CreateNew.fx.yaml
+++ b/app/Src/CreateNew.fx.yaml
@@ -51,6 +51,73 @@ CreateNew As screen:
         Y: =168
         ZIndex: =4
 
+        Attachments_DataCard3 As typedDataCard.attachmentsEditCard:
+            BorderStyle: =BorderStyle.Solid
+            DataField: ="{Attachments}"
+            Default: =ThisItem.Attachments
+            DisplayMode: =Parent.DisplayMode
+            DisplayName: =DataSourceInfo([@TemplateList],DataSourceInfo.DisplayName,"{Attachments}")
+            Fill: =RGBA(0, 0, 0, 0)
+            Height: =50
+            Required: =false
+            Update: =DataCardValue25.Attachments
+            Width: =855
+            X: =0
+            Y: =1
+            ZIndex: =1
+
+            DataCardKey22 As label:
+                AutoHeight: =true
+                Height: =34
+                Text: =Parent.DisplayName
+                Width: =141
+                Wrap: =false
+                X: =30
+                Y: =10 + (DataCardValue25.Height / 2) - (Self.Height / 2)
+                ZIndex: =1
+
+            DataCardValue25 As attachments:
+                BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
+                DisplayMode: =Parent.DisplayMode
+                Height: =108
+                IsInDataCard: =true
+                Items: =Parent.Default
+                MaxAttachments: =1
+                PaddingBottom: =5
+                PaddingLeft: =If(Self.DisplayMode = DisplayMode.Edit, 5, 0)
+                PaddingRight: =5
+                PaddingTop: =5
+                Tooltip: =Parent.DisplayName
+                Width: =598
+                X: =DataCardKey22.X + DataCardKey22.Width
+                Y: =10
+                ZIndex: =2
+
+            ErrorMessage22 As label:
+                AutoHeight: =true
+                Height: =10
+                Live: =Live.Assertive
+                PaddingBottom: =0
+                PaddingLeft: =0
+                PaddingRight: =0
+                PaddingTop: =0
+                Text: =Parent.Error
+                Visible: =Parent.DisplayMode=DisplayMode.Edit
+                Width: =Parent.Width - 60
+                X: =30
+                Y: =DataCardValue25.Y + DataCardValue25.Height
+                ZIndex: =3
+
+            StarVisible22 As label:
+                Align: =Align.Center
+                Height: =DataCardKey22.Height
+                Text: ="*"
+                Visible: =And(Parent.Required, Parent.DisplayMode=DisplayMode.Edit)
+                Width: =30
+                Wrap: =false
+                Y: =DataCardKey22.Y
+                ZIndex: =4
+
         Title_DataCard1_1 As typedDataCard.textualEditCard:
             BorderStyle: =BorderStyle.Solid
             DataField: ="Title"
@@ -68,10 +135,9 @@ CreateNew As screen:
             ZIndex: =2
 
             DataCardKey1_1 As label:
-                AutoHeight: =true
-                Height: =34
+                Height: =37
                 Text: =Parent.DisplayName
-                Width: =(Parent.Width - 60) * 0.4
+                Width: =140
                 Wrap: =false
                 X: =30
                 Y: =10 + (DataCardValue1_1.Height / 2) - (Self.Height / 2)
@@ -119,65 +185,6 @@ CreateNew As screen:
                 Wrap: =false
                 Y: =DataCardKey1_1.Y
                 ZIndex: =4
-
-        "'html _DataCard1_1' As typedDataCard.textualEditCard":
-            BorderStyle: =BorderStyle.Solid
-            DataField: ="html"
-            Default: =ThisItem.'html '
-            DisplayMode: =Parent.DisplayMode
-            DisplayName: =DataSourceInfo([@TemplateList],DataSourceInfo.DisplayName,"html")
-            Fill: =RGBA(0, 0, 0, 0)
-            Height: =293
-            MaxLength: =DataSourceInfo([@TemplateList], DataSourceInfo.MaxLength, "html")
-            Required: =false
-            Update: =RichTextEditor1_1.HtmlText
-            Width: =855
-            X: =0
-            Y: =1
-            ZIndex: =2
-
-            DataCardKey5_1 As label:
-                AutoHeight: =true
-                Height: =34
-                Text: =Parent.DisplayName
-                Width: =148
-                Wrap: =false
-                X: =30
-                Y: =10 + (RichTextEditor1_1.Height / 2) - (Self.Height / 2)
-                ZIndex: =1
-
-            ErrorMessage5_1 As label:
-                AutoHeight: =true
-                Height: =10
-                Live: =Live.Assertive
-                PaddingBottom: =0
-                PaddingLeft: =0
-                PaddingRight: =0
-                PaddingTop: =0
-                Text: =Parent.Error
-                Visible: =Parent.DisplayMode=DisplayMode.Edit
-                Width: =Parent.Width - 60
-                X: =30
-                Y: =RichTextEditor1_1.Y + RichTextEditor1_1.Height
-                ZIndex: =3
-
-            StarVisible5_1 As label:
-                Align: =Align.Center
-                Height: =DataCardKey5_1.Height
-                Text: ="*"
-                Visible: =And(Parent.Required, Parent.DisplayMode=DisplayMode.Edit)
-                Width: =30
-                Wrap: =false
-                Y: =DataCardKey5_1.Y
-                ZIndex: =4
-
-            RichTextEditor1_1 As richTextEditor:
-                Default: ="Enter some <strong>rich text</strong> here."
-                Height: =236
-                Width: =606
-                X: =165
-                Y: =33
-                ZIndex: =6
 
     NewCampaignForm As form:
         DataSource: =NewCampaign
@@ -471,7 +478,6 @@ CreateNew As screen:
             =Table({ID:1,Label:"Campaigns"},{ID:2,Label:"Templates"})
         TemplatePadding: =0
         TemplateSize: =163
-        Visible: =false
         Width: =330
         X: =532
         Y: =27
@@ -505,16 +511,9 @@ CreateNew As screen:
             Y: =4
             ZIndex: =1
 
-    Icon5_2 As icon.BackArrow:
-        Height: =48
-        Icon: =Icon.BackArrow
-        OnSelect: =ResetForm(NewCampaignForm);Back();
-        X: =258
-        Y: =27
-        ZIndex: =8
-
     Container5_1 As groupContainer.manualLayoutContainer:
         Height: =346
+        Visible: =If(varTabSelected = 1, true, false)
         Width: =222
         X: =18
         Y: =281
@@ -567,4 +566,25 @@ CreateNew As screen:
             Width: =Parent.Width
             Y: =Label3_1.Height + Label5_5.Height + Label5_6.Height + Label5_7.Height + Label5_8.Height
             ZIndex: =6
+
+    Icon4_6 As icon.Hamburger:
+        Height: =48
+        Icon: =Icon.Hamburger
+        OnSelect: =Set(varMenuIsOpen, true);
+        Width: =48
+        X: =40
+        Y: =40
+        ZIndex: =10
+
+    Container4_4 As groupContainer.manualLayoutContainer:
+        Height: =Parent.Height - 80
+        Visible: =varMenuIsOpen
+        Width: =300
+        X: =20
+        Y: =40
+        ZIndex: =11
+
+        NavMenu_5 As NavMenu:
+            OnChange: =Set(varMenuIsOpen, false);
+            Width: =Parent.Width
 
