--- a/app/Src/PreviewTemplateScreen.fx.yaml
+++ b/app/Src/PreviewTemplateScreen.fx.yaml
@@ -14,74 +14,6 @@ PreviewTemplateScreen As screen:
         Y: =79
         ZIndex: =3
 
-        Title_DataCard5 As typedDataCard.textualEditCard:
-            BorderStyle: =BorderStyle.Solid
-            DataField: ="Title"
-            Default: =ThisItem.Title
-            DisplayMode: =Parent.DisplayMode
-            DisplayName: =DataSourceInfo([@TemplateList],DataSourceInfo.DisplayName,"Title")
-            Fill: =RGBA(0, 0, 0, 0)
-            Height: =50
-            MaxLength: =DataSourceInfo([@TemplateList], DataSourceInfo.MaxLength, "Title")
-            Required: =true
-            Update: =DataCardValue27.Text
-            Width: =1130
-            X: =0
-            Y: =0
-            ZIndex: =4
-
-            DataCardKey24 As label:
-                AutoHeight: =true
-                Height: =34
-                Text: =Parent.DisplayName
-                Width: =(Parent.Width - 60) * 0.4
-                Wrap: =false
-                X: =30
-                Y: =10 + (DataCardValue27.Height / 2) - (Self.Height / 2)
-                ZIndex: =1
-
-            DataCardValue27 As text:
-                BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
-                Default: =Parent.Default
-                DelayOutput: =true
-                DisplayMode: =Parent.DisplayMode
-                MaxLength: =Parent.MaxLength
-                PaddingLeft: =5
-                RadiusBottomLeft: =0
-                RadiusBottomRight: =0
-                RadiusTopLeft: =0
-                RadiusTopRight: =0
-                Tooltip: =Parent.DisplayName
-                Width: =(Parent.Width - 60) * 0.6
-                X: =DataCardKey24.X + DataCardKey24.Width
-                Y: =10
-                ZIndex: =2
-
-            ErrorMessage24 As label:
-                AutoHeight: =true
-                Height: =10
-                Live: =Live.Assertive
-                PaddingBottom: =0
-                PaddingLeft: =0
-                PaddingRight: =0
-                PaddingTop: =0
-                Text: =Parent.Error
-                Visible: =Parent.DisplayMode=DisplayMode.Edit
-                Width: =Parent.Width - 60
-                X: =30
-                Y: =DataCardValue27.Y + DataCardValue27.Height
-                ZIndex: =3
-
-            StarVisible24 As label:
-                Align: =Align.Center
-                Height: =DataCardKey24.Height
-                Text: ="*"
-                Visible: =And(Parent.Required, Parent.DisplayMode=DisplayMode.Edit)
-                Width: =30
-                Wrap: =false
-                Y: =DataCardKey24.Y
-                ZIndex: =4
-
         Attachments_DataCard4 As typedDataCard.attachmentsEditCard:
             BorderStyle: =BorderStyle.Solid
             DataField: ="{Attachments}"
@@ -95,7 +27,7 @@ PreviewTemplateScreen As screen:
             Visible: =false
             Width: =1130
             X: =0
-            Y: =1
+            Y: =0
             ZIndex: =4
 
             DataCardKey27 As label:
@@ -150,24 +82,13 @@ PreviewTemplateScreen As screen:
 
     Label7_3 As label:
         FontWeight: =FontWeight.Bold
-        Height: =37
+        Height: =42
         Size: =24
-        Text: ="Preview Template"
-        Width: =351
-        X: =554
+        Text: ="Preview Template " & TemplatesGallery.Selected.Title
+        Width: =781
+        X: =366
         Y: =29
         ZIndex: =6
-
-    Icon4_2 As icon.Send:
-        Color: =RGBA(56, 96, 178, 1)
-        Height: =50
-        Icon: =Icon.Send
-        OnSelect: |-
-            =UpdateContext({varShowPopup: true})
-        Width: =46
-        X: =1033
-        Y: =29
-        ZIndex: =7
 
     Icon5_4 As icon.BackArrow:
         Height: =48
