--- a/app/Src/PreviewTemplateScreen.fx.yaml
+++ b/app/Src/PreviewTemplateScreen.fx.yaml
@@ -90,14 +90,6 @@ PreviewTemplateScreen As screen:
         Y: =29
         ZIndex: =6
 
-    Icon5_4 As icon.BackArrow:
-        Height: =48
-        Icon: =Icon.BackArrow
-        OnSelect: =ResetForm(TemplatePreviewForm);Back()
-        X: =286
-        Y: =23
-        ZIndex: =12
-
     HtmlText1_3 As htmlViewer:
         Height: =605
         HtmlText: =First(TemplatesGallery.Selected.Attachments).AbsoluteUri
@@ -105,4 +97,25 @@ PreviewTemplateScreen As screen:
         X: =52
         Y: =140
         ZIndex: =13
+
+    Icon4_2 As icon.Hamburger:
+        Height: =48
+        Icon: =Icon.Hamburger
+        OnSelect: =Set(varMenuIsOpen, true);
+        Width: =48
+        X: =40
+        Y: =40
+        ZIndex: =14
+
+    Container4_5 As groupContainer.manualLayoutContainer:
+        Height: =Parent.Height - 80
+        Visible: =varMenuIsOpen
+        Width: =300
+        X: =20
+        Y: =40
+        ZIndex: =15
+
+        NavMenu_6 As NavMenu:
+            OnChange: =Set(varMenuIsOpen, false);
+            Width: =Parent.Width
 
