--- a/app/Src/PreviewTemplateScreen.fx.yaml
+++ b/app/Src/PreviewTemplateScreen.fx.yaml
@@ -1,6 +1,6 @@
 PreviewTemplateScreen As screen:
     OnVisible: |-
-        =UpdateContext({varShowPopup: false})
+        =UpdateContext({TemplateContent: GetTemplateHTML.Run(TemplatesGallery.Selected.ID)});
 
     TemplatePreviewForm As form:
         DataSource: =TemplateList
@@ -91,8 +91,8 @@ PreviewTemplateScreen As screen:
         ZIndex: =6
 
     HtmlText1_3 As htmlViewer:
-        Height: =605
-        HtmlText: =First(TemplatesGallery.Selected.Attachments).AbsoluteUri
+        Height: =213
+        HtmlText: =TemplateContent
         Width: =1274
         X: =52
         Y: =140
