--- a/app/Src/CampaignScreen.fx.yaml
+++ b/app/Src/CampaignScreen.fx.yaml
@@ -71,7 +71,7 @@ CampaignScreen As screen:
             Tooltip: ="View item details"
             Width: =48
             X: =658
-            Y: =68
+            Y: =ExistingCampaignGallery.TemplateHeight / 2 - Self.Height / 2
             ZIndex: =4
 
         Separator3 As rectangle:
@@ -80,26 +80,6 @@ CampaignScreen As screen:
             Width: =Parent.TemplateWidth
             Y: =Parent.TemplateHeight - 1
             ZIndex: =5
-
-        NextArrow1_2 As icon.ChevronRight:
-            AccessibleLabel: =Self.Tooltip
-            Color: =RGBA(255, 0, 0, 1)
-            Height: =60
-            Icon: =Icon.Trash
-            OnSelect: |-
-                =Select(Parent);
-                Set(varCurrentCampaign, ExistingCampaignGallery.Selected);
-                RemoveIf(NewCampaign, ID = varCurrentCampaign.ID);
-                Refresh(RecipientsList);
-            PaddingBottom: =10
-            PaddingLeft: =10
-            PaddingRight: =10
-            PaddingTop: =10
-            TabIndex: =0
-            Tooltip: ="View item details"
-            Width: =48
-            X: =658
-            ZIndex: =6
 
     Icon3_2 As icon.Reload:
         Color: =RGBA(56, 96, 178, 1)
